--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="Refresh" content="2; url=public/index.html">
+<meta http-equiv="Refresh" content="2; url=/index.html">
 
 
 <head>
